<resources>
    <string name="app_name">DrinkFoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_an">Đồ ăn</string>
    <string name="thuc_uong">Thức uống</string>
    <string name="food_name">Tên món ăn</string>
    <string name="random">Random</string>
    <string name="them_mon">Thêm món mới</string>
    <string name="hint_nhap_mon">Nhập tên món ăn/thức uống…</string>
    <string name="drink">Thức uống</string>
    <string name="food">Đồ ăn</string>
    <string name="add_item">Thêm món</string>
    <string name="price">Nhập giá tiền</string>
    <string name="desc">Nhập mô tả</string>
    <string name="nameEdit">Tên món</string>
    <string name="priceEdit">Giá tiền</string>
    <string name="descEdit">Mô tả</string>
    <string name="detailBtn">Xem chi tiết món</string>
    <string name="priceTv">50.000đ</string>
    <string name="descDetail">Mô tả món ăn</string>
    <string name="wishlist">Wishlist</string>
    <string name="all">All</string>
    <string name="chip_food">Food</string>
    <string name="chip_drink">Drink</string>
    <string name="wishlist_title">Danh sách yêu thích</string>
    <string name="item_price">%1$dđ</string>
    <string name="wine_app_bar">Wine</string>
    <string name="wine_name">Spotted Dead Nettles</string>
    <string name="winery">Lamium Maculatum</string>
    <string name="add">Add</string>
    <string name="wine_image">TODO</string>
    <string name="originWine">Origin: %1$s</string>
    <string name="rating_star">★ %1$s</string>
    <string name="wine_reviews">(%1$s)</string>
    <string name="search_in_products">Search in products</string>
    <string name="view_all">View all</string>
    <string name="collection">Collection</string>
    <string name="collection_list">Wine Collection</string>
    <string name="origin">Origin:</string>
</resources>
